<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_main"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_white"
        android:text="@string/app_name"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_loan_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"
        android:hint="@string/please_input_loan_num"
        android:textSize="14sp"
        android:textColor="@color/color_4b4b4b"
        android:maxLength="8"
        android:inputType="number"
        android:maxLines="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+62"
            android:textSize="14sp"
            android:textColor="@color/color_4b4b4b"
            android:layout_gravity="center_vertical"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_mobile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_mobile_phone"
            android:textSize="14sp"
            android:textColor="@color/color_4b4b4b"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="11"/>

    </LinearLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_password"
        android:textSize="14sp"
        android:textColor="@color/color_4b4b4b"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_button"
        android:text="@string/login"
        android:textColor="@color/color_white"
        android:clickable="false"/>


</LinearLayout>