<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f4f4f4">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@mipmap/ic_back_main"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/color_main"
            android:layout_gravity="center"/>

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@color/color_white"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="12dp" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_808080"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/color_white"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tv_pay_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/color_4b4b4b"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/color_808080"
                            android:layout_marginTop="12dp"
                            android:text="@string/pembayaran"/>

                    </LinearLayout>

                    <View
                        android:layout_width="1px"
                        android:layout_height="28dp"
                        android:layout_gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tv_loan_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/color_4b4b4b"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/color_808080"
                            android:layout_marginTop="12dp"
                            android:text="@string/pinjaman"/>

                    </LinearLayout>

                    <View
                        android:layout_width="1px"
                        android:layout_height="28dp"
                        android:layout_gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tv_rate_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/color_4b4b4b"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/color_808080"
                            android:layout_marginTop="12dp"
                            android:text="@string/bunga"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sp_amount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_spinner_bg"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp"/>

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sp_day"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_spinner_bg"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="12dp"
                android:orientation="vertical"
                android:background="@color/color_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kondisi_aplikasi"
                    android:textSize="14sp"
                    android:textColor="@color/color_4b4b4b"
                    android:drawableLeft="@mipmap/ic_tiaojian"
                    android:drawablePadding="8dp"/>

                <TextView
                    android:id="@+id/tv_tiaojian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/color_808080"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bahan_yang_dibutuhkan"
                    android:textSize="14sp"
                    android:textColor="@color/color_4b4b4b"
                    android:drawableLeft="@mipmap/ic_cailiao"
                    android:drawablePadding="8dp"/>

                <TextView
                    android:id="@+id/tv_cailiao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/color_808080"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:layout_marginBottom="52dp"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bahan_yang_dibutuhkan"
                    android:textSize="14sp"
                    android:textColor="@color/color_4b4b4b"
                    android:drawableLeft="@mipmap/ic_shuoming"
                    android:drawablePadding="8dp"/>

                <TextView
                    android:id="@+id/tv_shuoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/color_808080"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_down"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_main"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        android:text="@string/down"
        android:visibility="gone"/>

</FrameLayout>